<resources>
  <string name="app_name">Pikasso </string>
  <string name="Color">color</string>
  <string name="Save">Save</string>
  <string name="LineWidth">Line Width</string>
  <string name="Erase">Erase</string>
  <string name="Clear">Clear</string>
  <string name="set_width">Set Width</string>
  <string name="label_alpha">Alpha</string>
  <string name="label_red">Red</string>
  <string name="label_green">Green</string>
  <string name="label_blue">Blue</string>
  <string name="set_color">Set Color</string>
</resources>
