<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/colorId"
    android:icon="@drawable/ic_color_lens_white_24dp"
    android:title="@string/Color"
    app:showAsAction="always"/>
  <item
    android:id="@+id/eraseId"
    android:icon="@drawable/ic_phonelink_erase_white_24dp"
    android:title="@string/Erase"
    app:showAsAction="always"/>
  <item
    android:id="@+id/clearId"
    android:icon="@android:drawable/ic_menu_close_clear_cancel"
    android:title="@string/Clear"/>
  <item
    android:id="@+id/saveId"
    android:icon="@android:drawable/ic_menu_save"
    android:title="@string/Save"/>
  <item
    android:id="@+id/lineWidth"
    android:icon="@drawable/ic_border_color_white_24dp"
    android:title="@string/LineWidth"
    app:showAsAction="always"/>
</menu>